2011-04-04  Rik  <octave@nomad.inbox5.com>

	* interpreter/plot.txi: Add warning about single precision in FLTK.

2011-04-04  Rik  <octave@nomad.inbox5.com>

	* interpreter/doccheck/aspell-octave.en.pws, interpreter/nonlin.txi, 
	interpreter/tips.txi: Spellcheck documentation for 3.4.1 release.

2011-04-04  Rik  <octave@nomad.inbox5.com>

	* interpreter/container.txi, interpreter/dynamic.txi,
	interpreter/install.txi, interpreter/system.txi, interpreter/tips.txi:
	Grammarcheck files for 3.4.1 release.

2011-04-04  Rik  <octave@nomad.inbox5.com>

	* interpreter/grammar.txi: Remove reference to deprecated function
	perror().

2011-04-03  Rik  <octave@nomad.inbox5.com>

	* interpreter/grammar.txi, interpreter/octave.texi: Add new section
	on parsing to documentation.  Add functions add_input_event_hook,
	remove_input_event_hook, missing_function_hook to documentation.

2011-04-03  Rik  <octave@nomad.inbox5.com>

	* interpreter/linalg.txi: Add blkmm function to documentation.

2011-04-02  Rik  <octave@nomad.inbox5.com>

	* interpreter/stats.txi: Add quantile, prctile functions to
	documentation.

2011-04-02  Rik  <octave@nomad.inbox5.com>

	* interpreter/system.txi: Add isdeployed function to documentation.

2011-03-31  Rik  <octave@nomad.inbox5.com>

	* interpreter/io.txi: Add list_in_columns, terminal_size functions
	to documentation.

2011-03-31  Rik  <octave@nomad.inbox5.com>

	* interpreter/errors.txi, interpreter/octave.texi: Add onCleanup
	function to documentation.

2011-03-31  Rik  <octave@nomad.inbox5.com>

	* interpreter/contrib.txi: Add recommended format for commit messages
	which reference the bug tracker.

2011-03-28  Rik  <octave@nomad.inbox5.com>

	* interpreter/expr.txi: Eliminate space between variable and
	parenthesis when using indexing.
	* interpreter/intro.txi, interpreter/io.txi: Fix typos in docstring.
	* interpreter/tips.txi: Add new recommendations for double spaces at
	start of sentences and suggested variable names.
