@@ -22,7 +22,7 @@
 ## @deftypefnx {Function File} {[@var{cd}] =} isocolors (@var{x}, @var{y}, @var{z}, @var{r}, @var{g}, @var{b}, @var{v})
 ## @deftypefnx {Function File} {[@var{cd}] =} isocolors (@var{r}, @var{g}, @var{b}, @var{v})
 ## @deftypefnx {Function File} {[@var{cd}] =} isocolors (@dots{}, @var{p})
-## @deftypefnx {Function File} isocolors (@dots{})
+## @deftypefnx {Function File} {} isocolors (@dots{})
 ##
 ## If called with one output argument and the first input argument
 ## @var{c} is a three-dimensional array that contains color values and
