@@ -1,3 +1,8 @@
+2011-04-06  Rik  <octave@nomad.inbox5.com>
+
+	* optimization/fminunc.m, plot/isocolors.m, plot/isonormals.m:
+	Clean up operator and function indices.
+
 2011-04-04  Rik  <octave@nomad.inbox5.com>
 
 	* miscellaneous/symvar.m, miscellaneous/warning_ids.m,
