@@ -1,3 +1,8 @@
+2011-04-06  Rik  <octave@nomad.inbox5.com>
+
+	* DLD-FUNCTIONS/dmperm.cc, data.cc: Clean up operator and function
+	indices.
+
 2011-04-04  Rik  <octave@nomad.inbox5.com>
 
 	* DLD-FUNCTIONS/nproc.cc: Spellcheck documentation for 3.4.1 release.
